--- a/app/src/main/res/layout/fragment_cloud_anchor.xml
+++ b/app/src/main/res/layout/fragment_cloud_anchor.xml
@@ -9,20 +9,25 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:id="@+id/surfaceView" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <Button
-            android:text="CLEAR"
-            android:id="@+id/clear_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:text="RESOLVE"
-            android:id="@+id/resolve_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <Button
+                android:text="CLEAR"
+                android:id="@+id/clear_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:text="RESOLVE"
+                android:id="@+id/resolve_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <EditText
+                android:id="@+id/description_edit_text"
+                android:hint="Add a description"
+                android:inputType="textMultiLine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></EditText>
+        </LinearLayout>
 </FrameLayout>
