--- a/app/src/main/res/layout/fragment_cloud_anchor.xml
+++ b/app/src/main/res/layout/fragment_cloud_anchor.xml
@@ -24,9 +24,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <EditText
-                android:id="@+id/description_edit_text"
-                android:hint="Add a description"
-                android:inputType="textMultiLine"
+                android:id="@+id/shortCode_edit_text"
+                android:hint="Add short code"
+                android:inputType="number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
         </LinearLayout>
